# discord-reargparse

./: README.md  pyproject.toml
discord_reargparse/: __init__.py  argparse.py  errors.py
examples/: basic_bot.py  hack.py
tests/: test_argparse.py
